CustomObjects/objects/blng__InvoiceRun__c.object
<CustomObject>
    <description>Stores the details of how many Invoices generated,how many Accounts processed &amp; Credit Notes generated.</description>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <externalId>true</externalId>
        <label>Apex Job Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__CompletedTime__c</fullName>
        <description>Invoice run completed  time</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__EnforceCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Scheduler</label>
        <referenceTo>blng__InvoiceScheduler__c</referenceTo>
        <relationshipLabel>Invoice Runs</relationshipLabel>
        <relationshipName>InvoiceSchedulerInvoiceRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PercentageComplete__c</fullName>
        <label>Percentage Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__ProgressBar__c</fullName>
        <formula>IMAGE(&apos;/resource/blng__InvoiceRun_ProgressBarFilled&apos;, &apos;Progress Bar&apos;, 10, ( blng__PercentageComplete__c * 100 )) &amp;
IMAGE(&apos;/resource/blng__InvoiceRun_ProgressBarBorder&apos;, &apos;Progress Border&apos;, 10, (100 - blng__PercentageComplete__c * 100 )) &amp;
&apos; &apos; &amp;
TEXT (blng__PercentageComplete__c * 100) &amp;
&apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__StatusIndicator__c</fullName>
        <formula>IF ( 
	OR (
		ISPICKVAL(blng__Status__c, &apos;Started&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 1/8 Processing&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 1/8 Completed&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 2/8 Processing&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 2/8 Completed&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 3/8 Processing&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 3/8 Completed&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 4/8 Processing&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 4/8 Completed&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 5/8 Processing&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 5/8 Completed&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 6/8 Processing&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 6/8 Completed&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 7/8 Processing&apos;), 
                ISPICKVAL(blng__Status__c, &apos;Step 7/8 Completed&apos;), 
		ISPICKVAL(blng__Status__c, &apos;Step 8/8 Processing&apos;)
	),
	IMAGE(&apos;/resource/blng__InvoiceRun_StatusOrange&apos;, &apos;In Progress&apos;, 20, 20),
	IF (
		ISPICKVAL(blng__Status__c, &apos;Completed with Errors&apos;),
		IMAGE(&apos;/resource/blng__InvoiceRun_StatusRed&apos;, &apos;In Progress&apos;, 20, 20),
		IF (
			ISPICKVAL(blng__Status__c, &apos;Completed&apos;),
			IMAGE(&apos;/resource/blng__InvoiceRun_StatusGreen&apos;, &apos;In Progress&apos;, 20, 20),
			&apos;&apos;
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceRunStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice Run</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>blng__All_Invoice_Runs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoice Runs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Invoice Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>